# shoppa-api-main

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  main.py  test.jsonc
nginx/: api.conf  domain.txt  main_site.conf  questionnaire-api.conf  questionnaire-front.conf  welcome.conf
scripts/: git_cred_config.sh  mongo_ip.sh
src/: error.rs  lib.rs  main.rs
src/api/: mod.rs
src/api/invoices/: mod.rs  routes.rs
src/api/management/: mod.rs
src/api/management/handlers/: mod.rs
src/api/management/handlers/categories/: mod.rs  routes.rs  types.rs
src/api/stores/: mod.rs
src/api/stores/handlers/: mod.rs
src/api/stores/middlewares/: anti_auth.rs  auth.rs  mod.rs
src/api/v1/: mod.rs
src/api/v1/handlers/: mod.rs
src/api/v1/middlewares/: anti_auth.rs  auth.rs  checkout_session.rs  ip_address.rs  mod.rs  new_auth.rs  pagination.rs  sorting.rs
src/db/: categories.rs  checkout_session.rs  invoices.rs  mod.rs  orders.rs  populate.rs  products.rs  store_users.rs  stores.rs  users.rs  variants.rs
src/db/aggregations/: add_fields.rs  common.rs  lookups.rs  mod.rs  search.rs  sorting.rs
src/db/indexes/: autocomplete product search index definition.json  default products search index.json  default store search index.json
src/db/inserts/: categories.rs  contact_us.rs  mod.rs  news_letter.rs  prelude.rs  products.rs  sites_visite.rs  stores.rs  users.rs  variants.rs
src/db/models/: categories.rs  common.rs  constans.rs  contact_us.rs  mod.rs  news_letter.rs  product.rs  product_items.rs  schame.rs  sites_visite.rs  store.rs  user.rs  variants.rs
src/db/models/categories/: fields.rs  mod.rs
src/db/models/contact_us/: fields.rs  mod.rs
src/db/models/news_letter/: mod.rs
src/db/models/product/: fields.rs  mod.rs
src/db/models/product_items/: mod.rs
src/db/models/sites_visite/: mod.rs
src/db/models/store/: fields.rs  mod.rs  schame.rs
src/db/models/user/: fields.rs  mod.rs
src/db/models/variants/: fields.rs  mod.rs
src/db/queries/: analytics.rs  categories.rs  contact_us.rs  mod.rs  prelude.rs  products.rs  store.rs  users.rs  variants.rs
src/db/updates/: categories.rs  contact_us.rs  mod.rs  products.rs  stores.rs  users.rs  variants.rs
src/emails/: mod.rs
src/helpers/: cookies.rs  env.rs  json.rs  mod.rs  parser.rs  random.rs  setup.rs  validators.rs
src/helpers/extractors/: form.rs  json.rs  mod.rs  query.rs
src/helpers/security/: cors.rs  mod.rs  passwords.rs  tokens.rs
src/helpers/types/: error_code.rs  mod.rs  responses.rs
src/prelude/: db_models.rs  handlers.rs  mod.rs  types.rs
src/services/: mod.rs
src/services/file_storage/: delete.rs  keys.rs  mod.rs  upload.rs
src/services/file_storge/: mod.rs
src/tokens/: mod.rs
(+101 files in other folders)
