[package]
name = "shoppa-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
bson = { version = "2.5.0", features = ["chrono-0_4", "serde_with"] }
chrono = "0.4.23"
dotenv = "0.15.0"
mongodb = "2.4.0"
serde = { version = "1.0.154", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }
tower = { version = "0.4.13", features = ["timeout"] }
validator = { version = "0.15", features = ["derive"] }
serde_with = "1"
async-trait = "0.1.66"
serde_json = "1.0.94"
argon2 = "0.5.0"
lazy_static = "1.4.0"
rusty_paseto = "0.5.0"
serde_repr = "0.1.11"
tower-cookies = "0.9.0"
tower-http = { version = "0.4.0", features = ["cors"] }
http = "0.2.9"
