[package]
name = "shoppa-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.10", features = ["multipart"] }
bson = { version = "2.5.0" }
chrono = {version = "0.4.23", features = ["serde"] }
dotenv = "0.15.0"
mongodb = "2.4.0"
serde = { version = "1.0.154", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }
tower = { version = "0.4.13", features = ["timeout"] }
validator = { version = "0.16.1", features = ["derive"] }
serde_json = "1.0.97"
lazy_static = "1.4.0"
rusty_paseto = "0.5.0"
tower-cookies = "0.9.0"
tower-http = { version = "0.4.0", features = ["cors", "trace"] }
http = "0.2.9"
aws-sdk-s3 = "0.26.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
bytes = "1.4.0"
strum_macros = "0.24.3"
strum = "0.24.1"
# shoppa-core = { path = "../api-core/shoppa-core", features = ["db", "security", "file-storage", "email-sender"] }
shoppa-core = { git = "https://github.com/yishayhaz/shoppa-core", features = ["db", "security", "file-storage", "email-sender"] }
